--- a/bremen1.html
+++ b/bremen1.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Welcome to my story.</h1>
-    <h2>Guess my name & click on cat afterwards</h2>
+    <h2>Guess my name & click on the cat afterwards</h2>
     <img
       onclick="window.location.href='bremen2.html'"
       src="Images/town-musicians-of-bremen-41647_1280.png"
