--- a/bremen3.html
+++ b/bremen3.html
@@ -38,6 +38,14 @@
             >
           </li>
           <li>
+            <a
+              onclick='window.open("https://www.youtube.com/watch?v=-8lXXg8dWHk"); return false;'
+              >click for: The Steam Turbine: The Surprising Relationship of
+              Engineering & Science<br />
+              by B. Hammack, University of Illinois</a
+            >
+          </li>
+          <li>
             <a onclick='window.location.href="bremen4.html"' id="continue"
               >click to continue</a
             >
