--- a/bremen4.html
+++ b/bremen4.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="bremen4.css" />
+    <title>My home</title>
   </head>
+
   <body>
-    BREMEN 4Hier komme ich her: Bremerhaven 1930iger.
+    <div class="container">
+      <h3>Hover over map of Germany</h3>
+      <br />
+      <img src="Images/map-606538_640.png" />
+      <div class="wrapper">
+        <div id="circle"></div>
+        <h2>
+          Look where I was built & launched: Bremerhaven on the North Sea /
+          Germany
+        </h2>
+        <p>
+          The Deutsche Schiff- und Maschinenbau started building me on June
+          18th, 1927. I was lauchned on August 16th, 1928, completed on July
+          5th, 1929 and started my maiden voyage on July 16th, 1929. My sister
+          ship is the S.S. Europa.
+        </p>
+        <a
+          onclick='window.open("https://www.youtube.com/watch?v=cY90nI_1DOI"); return false;'
+          >Launching of the 'Bremen'</a
+        >
+        <a
+          onclick='window.open("https://www.youtube.com/watch?v=pgHMa2Zyu1Q"); return false;'
+          >My Maiden Voyage on July 16th 1929</a
+        >
+        <a
+          onclick='window.open("https://www.youtube.com/watch?v=UHAd7CdJo68"); return false;'
+          >Bremerhaven in the 1930ies</a
+        >
+        <a href="bremen5.html">continue</a>
+      </div>
+    </div>
   </body>
 </html>
