bremen6 + bremen7 added

--- a/bremen6.html
+++ b/bremen6.html
@@ -3,9 +3,96 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="bremen6.css" />
+    <title>Voyage highlights</title>
   </head>
   <body>
-    BREMEN 6 HTML
+    <div class="split">
+      <div class="left">
+        <img id="paris" src="Images/paris-880760_1280.jpg" />
+        <img id="card0" src="Images/frame-8588017_1280.png" />
+      </div>
+      <div class="middle">
+        <!-- card -->
+        <div
+          class="postcard"
+          onclick='window.open("https://www.youtube.com/watch?v=ficWnS7G5Mo"); return false;'
+        >
+          <img id="card1" class="card" src="Images/frame-8588017_1280.png" />
+          <img class="movie" src="Images/Bermuda.png" />
+        </div>
+        <!-- card -->
+        <div
+          class="postcard"
+          onclick='window.open("https://www.youtube.com/watch?v=BXrM9MRc9-c"); return false;'
+        >
+          <img id="card2" class="card" src="Images/frame-8588017_1280.png" />
+          <img class="movie" src="Images/Transatlantic.png" />
+        </div>
+        <!-- card -->
+        <div
+          class="postcard"
+          onclick='window.open("https://www.youtube.com/watch?v=nU9UI9IH0lM"); return false;'
+        >
+          <img id="card3" class="card" src="Images/frame-8588017_1280.png" />
+          <img class="movie" src="Images/Southampton.png" />
+        </div>
+      </div>
+      <div class="right">
+        <div
+          class="postcard"
+          onclick='window.open("https://www.youtube.com/watch?v=F_qzcZePfe0"); return false;'
+        >
+          <img
+            id="card4"
+            class="card"
+            src="Images/frame-8588017_1280.png"
+            style="background-color: black"
+          />
+          <img class="movie2" src="Images/Passengers.png" />
+        </div>
+        <div
+          class="postcard"
+          onclick='window.open("https://www.youtube.com/watch?v=xgfxETyloKQ"); return false;'
+        >
+          <img id="card4" class="card" src="Images/frame-8588017_1280.png" />
+          <img class="movie2" src="Images/Express.png" />
+        </div>
+        <div
+          class="postcard"
+          onclick='window.open("https://www.youtube.com/watch?v=UTA5FG6TcAI"); return false;'
+        >
+          <img id="card4" class="card" src="Images/frame-8588017_1280.png" />
+          <img class="movie2" src="Images/Bremen1929.png" />
+        </div>
+      </div>
+      <div id="cta">
+        <br />
+        <h2>click on the card you want to read</h2>
+        <div
+          class="postcard"
+          onclick='window.open("https://www.youtube.com/watch?v=FAcmtsZDn60"); return false;'
+        >
+          <img id="card4" class="card" src="Images/frame-8588017_1280.png" />
+          <img class="movie2" src="Images/Interior.png" />
+        </div>
+        <div
+          class="postcard"
+          onclick='window.open("https://www.youtube.com/watch?v=eGfw9HF45bk"); return false;'
+        >
+          <img id="card4" class="card" src="Images/frame-8588017_1280.png" />
+          <img class="movie2" src="Images/Speed.png" />
+        </div>
+        <div
+          class="postcard"
+          onclick='window.open("https://www.youtube.com/watch?v=6fPItTZJntc"); return false;'
+        >
+          <img id="card4" class="card" src="Images/frame-8588017_1280.png" />
+          <img class="movie2" src="Images/Americareise.png" />
+        </div>
+        <br />
+        <a id="continue" href="bremen7.html">continue</a>
+      </div>
+    </div>
   </body>
 </html>
