--- a/bremen7.html
+++ b/bremen7.html
@@ -46,8 +46,9 @@
         </li>
       </ul>
     </div>
-    <canvas id="canvas1"></canvas>
-
+    <div class="wrapper">
+      <canvas id="canvas1"></canvas>
+    </div>
     <script src="bremen7.js"></script>
   </body>
 </html>
