--- a/bremen8.html
+++ b/bremen8.html
@@ -3,9 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="bremen8.css" />
+    <title>Invitation</title>
   </head>
   <body>
-    BREMEN 8
+    <div class="container">
+      <img id="camera" src="Images/camera-3357299_640.png" />
+      <div class="flash"></div>
+      <img id="captain" src="Images/494px-Adolf_Ahrens_(1879-1957).jpg" />
+      <div id="greetings">
+        <h1>Welcome on my ship S.S. Bremen.</h1>
+        <h2>
+          I am Heinrich Aldoph Ahrens and the captain of this ship. I was born
+          in Geestemünde and grew up here in Bremerhaven on the grounds of the
+          Rickmers shipyard. My father was a gardener there. At just 14 years of
+          age I became a cabin boy on a four-masted barque. I attended the
+          Elsfleth nautical school and became a ship's officer for the
+          Norddeutscher Lloyd in 1901. I worked for a year in the Imperial
+          Navy.<br />
+          After the First World War I worked as a merchant for four years. I
+          have been sailing again since 1923 and have been the captain of the
+          Bremen since 1936. And if you feel like it, you can come to New York
+          with us today (22 August 1939). We are sailing via Southampton and
+          Cherbourg. Travel with us!
+        </h2>
+        <br /><br /><br />
+        <a id="continue" href="bremen9.html">Sure, I'll come with you!</a>
+      </div>
+    </div>
   </body>
 </html>
