--- a/bremen9.html
+++ b/bremen9.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="bremen9.css" />
     <title>Our trip to NY starts</title>
   </head>
   <body>
-    BREMEN 9 HTML
+    <div id="left">
+      <p id="text">
+        Isn't it wonderful! This fresh sea air, this vastness, this freedom.<br /><br />
+        I love the sea. Just close your eyes, breathe deeply, listen to the
+        seagulls and you'll be a different person.<br /><br />
+        All the stress, worries and thoughts disappear in an instant.
+      </p>
+    </div>
+    <div class="container"></div>
+    <script src="bremen9.js"></script>
   </body>
 </html>
