changes because of sound

--- a/bremen9.html
+++ b/bremen9.html
@@ -12,10 +12,11 @@
         Isn't it wonderful! This fresh sea air, this vastness, this freedom.<br /><br />
         I love the sea. Just close your eyes, breathe deeply, listen to the
         seagulls and you'll be a different person.<br /><br />
-        All the stress, worries and thoughts disappear in an instant.
+        All the stress, worries and thoughts disappear in an instant.<br /><br /><br />Click
+        on seagulls!<br /><br /><br />Click on seagulls!
       </p>
     </div>
-    <div class="container"></div>
+    <div class="container" onclick="moeve()"></div>
     <script src="bremen9.js"></script>
   </body>
 </html>
