--- a/bremen10.html
+++ b/bremen10.html
@@ -11,7 +11,7 @@
       <div class="left">
         Look, the weather has changed. It is now 6 a.m. on August 23, 2024, and
         we are passing through the Strait of Dover. Tell me, what does the
-        conspicuous concentration of so many English warships mean? Destroyer,
+        conspicuous concentration of so many English warships mean? Destroyers,
         torpedo boats, submarines, minelayers, outpost ships. Just look. Even
         though we are not at war with England, this worries me.<br /><br />
         The port entrances in Southampton and Cherbourg have been severely
