upload bremen11 to 16

--- a/bremen11.html
+++ b/bremen11.html
@@ -3,9 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To New York</title>
+    <link rel="stylesheet" href="bremen11.css" />
+    <title>Bremen on its way to New York</title>
   </head>
   <body>
-    BREMEN 11 HTML
+    <div class="container">
+      <img src="Images/funny-5422930_1280.png" width="650px" height="650px" />
+      <h2>
+        Since August 22nd, 1939, the S.S.Bremen is heading full speed for New
+        York. <br />Today is Wednesday, August 23rd, 1939 when the following
+        article appears in the New York`s evening newspapers.
+      </h2>
+      <div class="call">Germany calls its ships home</div>
+      <div class="details">
+        The German government has issued instructions that all German ships must
+        either return to Germany or dock at a neutral port.<br />
+        In New York, people are wondering whether the S.S. Bremen will even
+        arrive. There has been no news from the Bremen for some time. There is a
+        great deal of uncertainty, not just among the passengers who want to
+        start their journey back to Germany in New York.<br /><br />
+        <a id="ask" href="#">I want to ask Captian Ahrens what`s going on.</a
+        ><br /><br />
+        <a id="continue" href="bremen12.html">continue</a>
+      </div>
+    </div>
+    <script src="bremen11.js"></script>
   </body>
 </html>
