--- a/bremen14.html
+++ b/bremen14.html
@@ -62,9 +62,7 @@
         </li>
       </ul>
     </div>
-    <div id="rainy-container">
-      <!-- Raindrop elements will be added here -->
-    </div>
+    <div id="rainy-container"></div>
     <script src="bremen14.js"></script>
   </body>
 </html>
