--- a/bremen17.html
+++ b/bremen17.html
@@ -3,9 +3,158 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="bremen17.css" />
     <title>The days pass</title>
   </head>
   <body>
-    the days pass
+    <div class="container">
+      <h1>Press releases</h1>
+      <br />
+      <div class="media">
+        <div class="card">
+          <div class="content">
+            <h3>06th Sept. 1939</h3>
+            <p>
+              <u><strong>Il Popolo D'Italia:</strong></u
+              ><br /><br />
+              <em
+                >Two large German steamers, the "Bremen" and the "Columbus",
+                were able to reach safety in the neutral port of<br />
+                <strong>Vera Cruz</strong></em
+              >
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h3>08th Sept. 1939</h3>
+            <p>
+              <u><strong>Tidens Tegan / Oslo:</strong></u
+              ><br /><br />
+              <em
+                >Informed sources report that the Bremen is safe in a neutral
+                port in <br />
+                <strong>Icelandic waters</strong></em
+              >
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h3>09th Sept. 1939</h3>
+            <p>
+              <u><strong>Gazet van Antwerpen / Belgium:</strong></u
+              ><br /><br />
+              <em
+                >The Bremen is said to be safe in the<strong
+                  >port of Reykjavik in Iceland</strong
+                >
+                . Since Denmark remains neutral, the ship apparently entered the
+                port on Thursday morning. <br />
+              </em>
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h3>09th Sept. 1939</h3>
+            <p>
+              <u><strong>Gazet van Antwerpen / Belgium:</strong></u
+              ><br /><br />
+              <em
+                >The Bremen has not arrived at the
+                <strong>port of Reykjavik in Iceland</strong>
+                <br />
+              </em>
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h3>12th Sept. 1939</h3>
+            <p>
+              <u><strong>Lloyd Anversois / Belgium:</strong></u
+              ><br />
+              <em
+                >The "Nieuwe Rotterdamsche Courant" writes that two days after
+                leaving New York, i.e. on the open sea, the Bremen was placed
+                under the Italian flag. Under the Italian flag, the ship set
+                course for the <strong>Italian peninsula</strong>.
+
+                <br />
+              </em>
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h3>15th Sept. 1939</h3>
+            <p>
+              <u><strong>Aftonbladet / Stockholm:</strong></u
+              ><br />
+              <em
+                >The rumor that the Bremen is on its way to an Italian port is
+                considered very unlikely in maritime circles. Even if this were
+                the case, it is expected that the British would seize it and
+                take it to a British port.
+
+                <br />
+              </em>
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h3>15th Sept. 1939</h3>
+            <p>
+              <u><strong>Gazet van Antwerpen / Belgium:</strong></u
+              ><br /><br />
+              <em
+                >Netherlands Allgemeen Handelsblad writes: The Bremen is said to
+                be in a <strong>Spanish port</strong>. The rumors that the ship
+                passed into Italian hands at sea, was dismissed as unfounded by
+                Norddeutscher Lloyd.
+
+                <br />
+              </em>
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h3>17th Sept. 1939</h3>
+            <p>
+              <u><strong>Aftonbladet / Stockholm:</strong></u
+              ><br /><br />
+              <em
+                >It is now feared that<strong> the Bremen has crashed </strong
+                >because a life preserver bearing the Bremen's name washed
+                ashore on the coast of Massachusetts.
+
+                <br />
+              </em>
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="content">
+            <h3>21st Sept. 1939</h3>
+            <p>
+              <u><strong>De Telegraaf, Amsterdam / Netherlands:</strong></u
+              ><br /><br />
+              <em
+                >According to reports received in London this morning, the
+                German steamer Bremen arrived
+                <strong> in a British port </strong>under escort of warships.
+                Official confirmation could not be obtained.
+
+                <br />
+              </em>
+            </p>
+          </div>
+        </div>
+      </div>
+      <a id="continue" href="bremen18.html">continue</a>
+    </div>
   </body>
 </html>
