--- a/bremen11.html
+++ b/bremen11.html
@@ -22,7 +22,7 @@
         arrive. There has been no news from the Bremen for some time. There is a
         great deal of uncertainty, not just among the passengers who want to
         start their journey back to Germany in New York.<br /><br />
-        <a id="ask" href="#">I want to ask Captian Ahrens what`s going on.</a
+        <a id="ask" href="#">I want to ask Captain Ahrens what`s going on.</a
         ><br /><br />
         <a id="continue" href="bremen12.html">continue</a>
       </div>
