--- a/bremen18.html
+++ b/bremen18.html
@@ -3,9 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="bremen18.css" />
     <title>What would you do?</title>
   </head>
   <body>
-    <div class="container">What would you do?</div>
+    <img src="Images/idea-1195914_640.png" />
+    <div class="container">
+      <h1>What would YOU do?</h1>
+      <h3>
+        Imagine you were the captain of the Bremen. <br />What would you do if
+        you were on the ship in the middle of the Atlantic and you found out
+        that your country had started a war and that the surrounding countries
+        that you had to pass through with the ship had declared war on your
+        country in return?<br /><br />Each time you click on the ADD button, a
+        new box is created for a new idea. Just type it into the box.
+      </h3>
+      <h3>Double click on a note to remove it</h3>
+      <br />
+      <a id="continue" href="bremen19.html">continue</a>
+      <div class="sticker" id="sticker">
+        <button class="addNote" id="addNote">ADD</button>
+      </div>
+    </div>
+    <script src="bremen18.js"></script>
   </body>
 </html>
