update after img upload

--- a/bremen10.html
+++ b/bremen10.html
@@ -36,7 +36,7 @@
         <a
           onclick='window.open("https://www.youtube.com/watch?v=NMqJ6p8MD1s"); return false;'
           >Single British Warships</a
-        ><a onclick="window.open('bremen11.html')">continue</a>
+        ><a href="bremen11.html">continue</a>
       </div>
     </div>
   </body>
