--- a/bremen12.html
+++ b/bremen12.html
@@ -9,36 +9,16 @@
   <body>
     <div class="container">
       <div class="images">
+        <img src="Images/statueLeft.jpg" width="250px" height="150px" />
+        <img src="Images/statueLeft.jpg" width="250px" height="150px" />
+        <img src="Images/statueLeft.jpg" width="250px" height="150px" />
         <img
-          src="https://cdn.pixabay.com/photo/2014/02/17/10/20/statue-of-liberty-267948_640.jpg"
+          src="Images/american-flag-7218429_640.png"
           width="250px"
           height="150px"
         />
-        <img
-          src="https://cdn.pixabay.com/photo/2014/02/17/10/20/statue-of-liberty-267948_640.jpg"
-          width="250px"
-          height="150px"
-        />
-        <img
-          src="https://cdn.pixabay.com/photo/2014/02/17/10/20/statue-of-liberty-267948_640.jpg"
-          width="250px"
-          height="150px"
-        />
-        <img
-          src="https://cdn.pixabay.com/photo/2017/03/14/21/00/american-flag-2144392_640.png"
-          width="250px"
-          height="150px"
-        />
-        <img
-          src="https://cdn.pixabay.com/photo/2014/02/17/10/20/statue-of-liberty-267949_640.jpg"
-          width="250px"
-          height="150px"
-        />
-        <img
-          src="https://cdn.pixabay.com/photo/2014/02/17/10/20/statue-of-liberty-267949_640.jpg"
-          width="250px"
-          height="150px"
-        />
+        <img src="Images/statueRight.jpg" width="250px" height="150px" />
+        <img src="Images/statueRight.jpg" width="250px" height="150px" />
       </div>
       <br /><br />
       <h1>
