--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>MyHistory</title>
   </head>
   <body>
+    <!-- Mobile Message -->
+    <div class="mobile-message">
+      <h2>
+        Please use appliation <br />on large screen <br />(PC or laptop screen)
+      </h2>
+    </div>
     <canvas id="canvas1"></canvas>
     <div class="container">
       <h1>Welcome to <em>myHistory</em></h1>
