--- a/bremen20.html
+++ b/bremen20.html
@@ -88,9 +88,9 @@
         <h3>
           <u>A few words about Captain Ahrens:</u><br /><br />
           He retired in 1941. From 1949 to 1953 he was a member of the 1st
-          German Bundestag. In Bremerhaven, Kommodore-Ahrens-Straße was named
-          after him. Due to Ahrens' Nazi past (he was a member of the NSDAP),
-          additional explanatory signs were added to the street signs in
+          German Bundestag. In Bremerhaven the Kommodore-Ahrens-Straße (street)
+          was named after him. Due to Ahrens' Nazi past (he was a member of the
+          NSDAP), additional explanatory signs were added to the street signs in
           2017.<br /><br />
           <p class="close" onclick="closeCaptain()">close this text box</p>
         </h3>
