line breaks in text added

--- a/bremen19.html
+++ b/bremen19.html
@@ -18,9 +18,13 @@
           <li id="day6">04.09. etc.</li>
         </ul>
         <div class="content">
-          What we have experienced and done in the last few days in brief.<br />Click
-          on the tab of the day that interests you above to find out more. Best
-          to start with 30.08. Just click on it.
+          <br />
+          <br />
+          <br /><strong>
+            What we have experienced and done in the last few days in brief.<br />Click
+            on the tab of the day that interests you above to find out more.
+            Best to start with 30.08. Just click on it.</strong
+          >
         </div>
       </div>
       <a id="continue" href="bremen20.html">continue</a>
